# rts

./: .gitignore  README.md  research_report.md  research_report_v2.md  system_diagrams.md
rts_project/: Cargo.toml  README.md  RTS2509_AssignmentBrief_v1.docx  RTS2509_AssignmentBrief_v1.txt  benchmark_results.json  benchmark_results_high_load.json  timing_log.txt  timing_log_high_load.txt
rts_project/benches/: system_benchmark.rs
rts_project/src/: actuator.rs  benchmark.rs  config.rs  failsafe.rs  fault_injection.rs  ipc.rs  lib.rs  main.rs  pid_controller.rs  sensor.rs  shared_resource.rs  types.rs
