[package]
name = "rts_manufacturing"
version = "1.0.0"
edition = "2021"
authors = ["Student"]
description = "Real-Time Sensor-Actuator System for Automated Manufacturing"

[dependencies]
# Concurrency and Threading
crossbeam = "0.8"
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Async Runtime
tokio = { version = "1.35", features = ["full", "rt-multi-thread", "sync", "time", "macros"] }

# Time and Timing
chrono = "0.4"

# Random number generation for sensor simulation
rand = "0.8"
rand_distr = "0.4"

# Serialization (for logging)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Statistics and math
statrs = "0.16"

# Atomic operations
atomic = "0.6"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "system_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
